Appointment Student oks na alert nlng or katung pop up

--- a/Gabay-Final-V2/Web.config
+++ b/Gabay-Final-V2/Web.config
@@ -25,8 +25,7 @@
 		<add key="SystemEmailPass" value="mddm acdj qcdd hngb" />
 		<add key="ClientValidationEnabled" value="true" />
 		<add key="UnobtrusiveJavaScriptEnabled" value="true" />
-		<!--Boss Jer-->
-		<add key="ValidationSettings:UnobtrusiveValidationMode" value="None" />
+		<!--Boss Jer: katung error sa AppForm--><add key="ValidationSettings:UnobtrusiveValidationMode" value="None" />
 	</appSettings>
   <runtime>
 	<assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
