--- a/Gabay-Final-V2/Web.config
+++ b/Gabay-Final-V2/Web.config
@@ -8,6 +8,7 @@
 	<compilation debug="true" targetFramework="4.7.2" />
 	<httpRuntime targetFramework="4.7.2" />
 	<sessionState mode="InProc" timeout="100" />
+    <!--<pages enableViewState="true" />-->
   </system.web>
   <system.codedom>
 	<compilers>
