--- a/Gabay-Final-V2/Gabay-Final-V2.csproj
+++ b/Gabay-Final-V2/Gabay-Final-V2.csproj
@@ -2277,8 +2277,10 @@
     <Content Include="Views\Modules\Admin_Modules\Manage_Chatbot.aspx" />
     <Content Include="Views\Modules\Announcement\DepartmentAnnouncement.aspx" />
     <Content Include="Views\Modules\Announcement\Student_Announcement.aspx" />
+    <Content Include="Views\Modules\Appointment\front appointmetn.txt" />
     <Content Include="Views\Modules\Appointment\Manage_Appointment.aspx" />
     <Content Include="Views\Modules\Appointment\Student_Appointment.aspx" />
+    <Content Include="Views\Modules\Appointment\back appointment.txt" />
     <Content Include="Views\Modules\CampusInfo\Department_CampusInfo.aspx" />
     <Content Include="Views\Modules\CampusInfo\Student_CampusInfo.aspx" />
     <Content Include="Views\Modules\Chatbot\Department_Chatbot.aspx" />
