--- a/Gabay-Final-V2/Gabay-Final-V2.csproj
+++ b/Gabay-Final-V2/Gabay-Final-V2.csproj
@@ -2316,6 +2316,7 @@
     <Content Include="Views\Modules\Admin_Modules\Manage_FAQ.aspx" />
     <Content Include="Views\Modules\Admin_Modules\Manage_Users.aspx" />
     <Content Include="Views\Modules\Announcement\Department_Announcement.aspx" />
+    <Content Include="Views\Modules\Appointment\Guest_Appointment.aspx" />
     <Content Include="Views\Modules\Appointment\Manage_Appointment.aspx" />
     <Content Include="Views\Modules\Appointment\Student_Appointment.aspx" />
     <Content Include="Views\Modules\Campus_Info\Department_CampusInfo.aspx" />
@@ -2607,6 +2608,13 @@
     </Compile>
     <Compile Include="Views\Modules\Announcement\Department_Announcement.aspx.designer.cs">
       <DependentUpon>Department_Announcement.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Views\Modules\Appointment\Guest_Appointment.aspx.cs">
+      <DependentUpon>Guest_Appointment.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Views\Modules\Appointment\Guest_Appointment.aspx.designer.cs">
+      <DependentUpon>Guest_Appointment.aspx</DependentUpon>
     </Compile>
     <Compile Include="Views\Modules\Appointment\Manage_Appointment.aspx.cs">
       <DependentUpon>Manage_Appointment.aspx</DependentUpon>
