--- a/Gabay-Final-V2/Web.config
+++ b/Gabay-Final-V2/Web.config
@@ -12,7 +12,7 @@
 	<system.webServer>
 		<security>
 			<requestFiltering>
-				<requestLimits maxAllowedContentLength="26214400"/>
+				<requestLimits maxAllowedContentLength="26214400" />
 			</requestFiltering>
 		</security>
 	</system.webServer>
@@ -23,13 +23,13 @@
 	</compilers>
   </system.codedom>
 	<connectionStrings>
-		<add name="Gabaydb" connectionString="Data Source=LAPTOP-35UJ0LOL\SQLEXPRESS;Initial Catalog=gabay_v.1.8;Integrated Security=True" providerName="System.Data.SqlClient" />
+		<add name="Gabaydb" connectionString="Data Source=LAPTOP-35UJ0LOL\SQLEXPRESS;Initial Catalog=gabaydb_v.1.8;Integrated Security=True" />
 	</connectionStrings>
 	<appSettings>
 		<add key="webpages:Version" value="3.0.0.0" />
 		<add key="webpages:Enabled" value="false" />
 		<add key="SystemEmail" value="email.test1881@gmail.com" />
-		<add key="SystemEmailPass" value="kbpd yybq zfhu taof" />
+		<add key="SystemEmailPass" value="juqb yxrd gqkh qkpq" />
 		<add key="ClientValidationEnabled" value="true" />
 		<add key="UnobtrusiveJavaScriptEnabled" value="true" />
 		<add key="ValidationSettings:UnobtrusiveValidationMode" value="=None" />
