--- a/Gabay-Final-V2/packages.config
+++ b/Gabay-Final-V2/packages.config
@@ -1,7 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="bootstrap" version="5.3.2" targetFramework="net472" />
+  <package id="BouncyCastle" version="1.8.9" targetFramework="net472" />
   <package id="BouncyCastle.Cryptography" version="2.2.1" targetFramework="net472" />
+  <package id="iTextSharp" version="5.5.13.3" targetFramework="net472" />
   <package id="jQuery" version="3.7.1" targetFramework="net472" />
   <package id="MailKit" version="4.2.0" targetFramework="net472" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="4.1.0" targetFramework="net472" />
@@ -15,4 +17,6 @@
   <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net472" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net472" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net472" />
+  <package id="ZXing" version="2.1.1" targetFramework="net472" />
+  <package id="ZXing.Net" version="0.16.9" targetFramework="net472" />
 </packages>
