Department Info File

--- a/Gabay-Final-V2/Gabay-Final-V2.csproj
+++ b/Gabay-Final-V2/Gabay-Final-V2.csproj
@@ -2880,6 +2880,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Resources\tempPDF\" />
+    <Folder Include="Views\DashBoard\Department_Homepage\Uploads\" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
