Notification and Manage User Generate Reports

--- a/Gabay-Final-V2/Gabay-Final-V2.csproj
+++ b/Gabay-Final-V2/Gabay-Final-V2.csproj
@@ -2340,6 +2340,7 @@
     <Content Include="Views\Modules\Announcement\Department_Announcement.aspx" />
     <Content Include="Views\Modules\Appointment\AppointmentHistory.aspx" />
     <Content Include="Views\Modules\Appointment\Appointment_Status.aspx" />
+    <Content Include="Views\Modules\Appointment\Guest_App Backend back up.txt" />
     <Content Include="Views\Modules\Appointment\Guest_Appointment.aspx" />
     <Content Include="Views\Modules\Appointment\Manage_Appointment.aspx" />
     <Content Include="Views\Modules\Appointment\Student_Appointment.aspx" />
