--- a/Gabay-Final-V2/packages.config
+++ b/Gabay-Final-V2/packages.config
@@ -5,13 +5,14 @@
   <package id="BouncyCastle.Cryptography" version="2.2.1" targetFramework="net472" />
   <package id="iTextSharp" version="5.5.13.3" targetFramework="net472" />
   <package id="jQuery" version="3.7.1" targetFramework="net472" />
-  <package id="MailKit" version="4.2.0" targetFramework="net472" />
+  <package id="MailKit" version="4.3.0" targetFramework="net472" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="4.1.0" targetFramework="net472" />
-  <package id="MimeKit" version="4.2.0" targetFramework="net472" />
+  <package id="MimeKit" version="4.3.0" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net472" />
+  <package id="NTextCat" version="0.3.65" targetFramework="net472" />
   <package id="QRCoder" version="1.4.3" targetFramework="net472" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
-  <package id="System.Formats.Asn1" version="7.0.0" targetFramework="net472" />
+  <package id="System.Formats.Asn1" version="8.0.0" targetFramework="net472" />
   <package id="System.Memory" version="4.5.5" targetFramework="net472" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net472" />
