--- a/Gabay-Final-V2/Web.config
+++ b/Gabay-Final-V2/Web.config
@@ -32,7 +32,7 @@
 		<add key="SystemEmailPass" value="juqb yxrd gqkh qkpq" />
 		<add key="ClientValidationEnabled" value="true" />
 		<add key="UnobtrusiveJavaScriptEnabled" value="true" />
-		<add key="ValidationSettings:UnobtrusiveValidationMode" value="=None" />
+		<add key="ValidationSettings:UnobtrusiveValidationMode" value="None" />
 	</appSettings>
   <runtime>
 	<assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
