--- a/Gabay-Final-V2/Web.config
+++ b/Gabay-Final-V2/Web.config
@@ -32,7 +32,7 @@
 		<add key="SystemEmailPass" value="juqb yxrd gqkh qkpq" />
 		<add key="ClientValidationEnabled" value="true" />
 		<add key="UnobtrusiveJavaScriptEnabled" value="true" />
-		<add key="ValidationSettings:UnobtrusiveValidationMode" value="None" />
+		<add key="ValidationSettings:UnobtrusiveValidationMode" value="=None" />
 	</appSettings>
   <runtime>
 	<assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
@@ -43,6 +43,10 @@
 		<dependentAssembly>
 			<assemblyIdentity name="System.Formats.Asn1" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
 			<bindingRedirect oldVersion="0.0.0.0-8.0.0.0" newVersion="8.0.0.0" />
+		</dependentAssembly>
+		<dependentAssembly>
+			<assemblyIdentity name="System.Memory" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
+			<bindingRedirect oldVersion="0.0.0.0-4.0.1.2" newVersion="4.0.1.2" />
 		</dependentAssembly>
 	</assemblyBinding>
   </runtime>
